0.03003 2008-08-21

    - Updated to work with is_field/is_block changes in HTML-FormFu

0.03002 2008-08-11

    - New {label} setting.
    
    - New {new_empty_row_multi} setting.
    
    - Allow {nested_base} on non-column, non-rel methods.
    
    - Bugfix: RT#35861 - not all non-field elements have a nested_name() method.
    
    - Bugfix: use new_related() instead of create_related() before setting
      column values, to ensure we don't die on NOT NULL columns.

0.03000 2008-06-19

    - First CPAN release
    - HTML::FormFu::Model::DBIC moved out of HTML::FormFu distribution