@@ -1,0 +1,18 @@
+---
+auto_fieldset: 1
+
+elements:
+  - type: Hidden
+    name: id
+  
+  - type: Text
+    name: name
+  
+  - type: ComboBox
+    name: addresses
+  
+  - type: Hidden
+    name: count
+  
+  - type: Submit
+    name: submit
