@@ -22,6 +22,13 @@ elements:
       - [2, two]
       - [3, three]
       
+  - type: ComboBox
+    name: combobox_col
+    options:
+      - [1, one]
+      - [2, two]
+      - [3, three]
+  
   - type: Radio
     name: radio_col
     value: yes
